add app images and apps page

--- a/apps.html
+++ b/apps.html
@@ -19,7 +19,61 @@
       <div id="header">
         <h1>Apps by</br><b>Daniel Pape</b></h1>
       </div>
-      <ul class="apps">
+         <div class"appContent">
+          <a href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" target="_blank"><div class="top app eve">
+            <h2 class="appName">EVE ALARM</h2>
+            <div class="tags">
+            <h3 class="appTag">Objective-C</h3><h3 class="appTag">Custom Interface</h3><h3 class="appTag">Notifications</h3>
+            </div>
+            <p class="appDescription">Eve Alarm is an alarm that reminds you to go to bed on time.</p>
+         </div>
+         </a>
+      </div>
+      <div class="app">
+         <div class"appContent">
+            <a href="https://itunes.apple.com/ca/app/eve-alarm-power-nap/id789920975?mt=8" target="_blank"><div class="top app evenap">
+            <h2 class="appName">EVE NAP TIMER</h2>
+            <div class="tags">
+            <h3 class="appTag">Objective-C</h3><h3 class="appTag">Custom Interface</h3><h3 class="appTag">Notifications</h3>
+            </div>
+            <p class="appDescription">Eve Nap Timer is an simple timer app with a custom interface.</p>
+         </div>
+         </a>
+      </div>
+      <div class="app">
+         <div class"appContent">
+         <a href="https://itunes.apple.com/gb/app/progress-1000-by-london-evening/id931391607?mt=8" target="_blank"><div class="top app progress">
+            <h2 class="appName">THE PROGRESS 1000</h2>
+            <div class="tags">
+            <h3 class="appTag">Objective-C</h3><h3 class="appTag">JSON Database</h3><h3 class="appTag">Adobe Analytics</h3>
+            </div>
+            <p class="appDescription">The Progress 1000 by London Evening Standard is an interactive list of the 1000 most influential people in the captial.</p>
+         </div>
+         </a>
+      </div>
+      <div class="app">
+         <div class"appContent">
+         <a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8" target="_blank"><div class="top app mapgrounds">
+            <h2 class="appName">MAPGROUNDS</h2>
+            <div class="tags">
+            <h3 class="appTag">Objective-C</h3><h3 class="appTag">Social Sharing</h3><h3 class="appTag">In-App Purchase</h3>
+            </div>
+            <p class="appDescription">Mapgrounds is an app to make beautiful wallpapers for your phone using maps of the places mean the most.</p>
+         </div>
+         </a>
+      </div>
+      <div class="last app">
+         <div class"appContent">
+         <a href="https://itunes.apple.com/gb/app/copywriter/id670760844?mt=8" target="_blank"><div class="top app copywriter">
+            <h2 class="appName">COPYWRITER</h2>
+            <div class="tags">
+            <h3 class="appTag">Objective-C</h3><h3 class="appTag">Animation</h3><h3 class="appTag">Custom Interface</h3>
+            </div>
+            <p class="appDescription">CopyWriter is a thesauris with a marketing brain, to allow copywriters to write copy with a consistent tone of voice.</p>
+         </div>
+         </a>
+      </div>
+      <!-- <ul class="apps">
          <li> <a href="https://itunes.apple.com/app/the-independent/id499587380?mt=8" target="_blank" rel="external nofollow" title="The Independent"> <img src="/img/ind175.png" alt="The Independent"> <span>The Independent</span> </a> </li>
          <li> <a href="https://itunes.apple.com/app/i-newspaper-your-concise-daily/id973146023?mt=8" target="_blank" rel="external nofollow" title="i"> <img src="/img/i175.jpeg" alt="i"> <span>i</span> </a> </li>
          <li> <a href="https://itunes.apple.com/gb/app/london-evening-standard-for/id950221270?mt=8" target="_blank" rel="external nofollow" title="London Evening Standard"> <img src="/img/es175.jpeg" alt="London Evening Standard"> <span> Evening Standard</span> </a> </li>
@@ -29,6 +83,6 @@
          <li> <a href="https://itunes.apple.com/app/mapgrounds/id792151906?mt=8" target="_blank" rel="external nofollow" title="Mapgrounds"> <img src="/img/map175.jpeg" alt="Mapgrounds"> <span>Mapgrounds</span> </a> </li>
          <li> <a href="https://itunes.apple.com/app/copywriter/id670760844?mt=8" target="_blank" rel="external nofollow" title="CopyWriter"> <img src="/img/cop175.png" alt="CopyWriter"> <span>CopyWriter</span> </a> </li>
       </ul>
-      <p style="padding-bottom:80px;">I released my first app, <a href="http://www.appstore.com/danielpape/evealarmtimetosleep" target="_blank">Eve Alarm</a>, in April 2013. It was downloaded over 10,000 times in the first 6 weeks and was featured in the <i>Utilities</i> section of the UK &amp; US App Stores for over 6 months. I coded it mostly on the tube on the way to and from work. Every day tens of thousands of people use the apps I am responsible for across all major platforms.</p>
+      <p style="padding-bottom:80px;">I released my first app, <a href="http://www.appstore.com/danielpape/evealarmtimetosleep" target="_blank">Eve Alarm</a>, in April 2013. It was downloaded over 10,000 times in the first 6 weeks and was featured in the <i>Utilities</i> section of the UK &amp; US App Stores for over 6 months. I coded it mostly on the tube on the way to and from work. Every day tens of thousands of people use the apps I am responsible for across all major platforms.</p> -->
    </body>
 </html>
