Tweaking Apps Page CSS

--- a/apps.html
+++ b/apps.html
@@ -23,53 +23,53 @@
           <a href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8" target="_blank"><div class="top app eve">
             <h2 class="appName">EVE ALARM</h2>
             <div class="tags">
-            <h3 class="appTag">Objective-C</h3><h3 class="appTag">Custom Interface</h3><h3 class="appTag">Notifications</h3>
+            <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">Custom&nbsp;Interface</h3><h3 class="appTag">Notifications</h3>
             </div>
-            <p class="appDescription">Eve Alarm is an alarm that reminds you to go to bed on time.</p>
+            <p class="appDescription">Eve Alarm is an alarm that reminds you to go to bed so you get a restful night's sleep.</p>
          </div>
          </a>
       </div>
       <div class="app">
          <div class"appContent">
-            <a href="https://itunes.apple.com/ca/app/eve-alarm-power-nap/id789920975?mt=8" target="_blank"><div class="top app evenap">
-            <h2 class="appName">EVE NAP TIMER</h2>
-            <div class="tags">
-            <h3 class="appTag">Objective-C</h3><h3 class="appTag">Custom Interface</h3><h3 class="appTag">Notifications</h3>
-            </div>
-            <p class="appDescription">Eve Nap Timer is an simple timer app with a custom interface.</p>
-         </div>
-         </a>
-      </div>
-      <div class="app">
-         <div class"appContent">
-         <a href="https://itunes.apple.com/gb/app/progress-1000-by-london-evening/id931391607?mt=8" target="_blank"><div class="top app progress">
+         <a href="https://itunes.apple.com/gb/app/progress-1000-by-london-evening/id931391607?mt=8" target="_blank"><div class="app progress1000">
             <h2 class="appName">THE PROGRESS 1000</h2>
             <div class="tags">
-            <h3 class="appTag">Objective-C</h3><h3 class="appTag">JSON Database</h3><h3 class="appTag">Adobe Analytics</h3>
+            <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">Universal&nbsp;App</h3><h3 class="appTag">JSON&nbsp;Database</h3></br><h3 class="appTag">Adobe&nbsp;Analytics</h3><h3 class="appTag">Offline&nbsp;caching</h3>
             </div>
             <p class="appDescription">The Progress 1000 by London Evening Standard is an interactive list of the 1000 most influential people in the captial.</p>
          </div>
          </a>
       </div>
-      <div class="app">
+      <div class="last app">
          <div class"appContent">
-         <a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8" target="_blank"><div class="top app mapgrounds">
-            <h2 class="appName">MAPGROUNDS</h2>
+         <a href="https://itunes.apple.com/gb/app/copywriter/id670760844?mt=8" target="_blank"><div class="app copywriter">
+            <h2 class="appName">COPYWRITER</h2>
             <div class="tags">
-            <h3 class="appTag">Objective-C</h3><h3 class="appTag">Social Sharing</h3><h3 class="appTag">In-App Purchase</h3>
+            <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">Custom&nbsp;Animation</h3><h3 class="appTag">Custom&nbsp;Interface</h3>
             </div>
-            <p class="appDescription">Mapgrounds is an app to make beautiful wallpapers for your phone using maps of the places mean the most.</p>
+            <p class="appDescription">CopyWriter is a thesauris with a marketing brain, to allow copywriters to write copy with a consistent tone of voice.</p>
          </div>
          </a>
       </div>
-      <div class="last app">
+      <div class="app">
          <div class"appContent">
-         <a href="https://itunes.apple.com/gb/app/copywriter/id670760844?mt=8" target="_blank"><div class="top app copywriter">
-            <h2 class="appName">COPYWRITER</h2>
+            <a href="https://itunes.apple.com/ca/app/eve-alarm-power-nap/id789920975?mt=8" target="_blank"><div class="app evenap">
+            <h2 class="appName">EVE NAP TIMER</h2>
             <div class="tags">
-            <h3 class="appTag">Objective-C</h3><h3 class="appTag">Animation</h3><h3 class="appTag">Custom Interface</h3>
+            <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">Custom&nbsp;Interface</h3><h3 class="appTag">Notifications</h3>
             </div>
-            <p class="appDescription">CopyWriter is a thesauris with a marketing brain, to allow copywriters to write copy with a consistent tone of voice.</p>
+            <p class="appDescription">Eve Nap Timer is an simple timer app with an intuitive sunset based user interface.</p>
+         </div>
+         </a>
+      </div>
+      <div class="app">
+         <div class"appContent">
+         <a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8" target="_blank"><div class="last app mapgrounds">
+            <h2 class="appName">MAPGROUNDS</h2>
+            <div class="tags">
+            <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">MapKit</h3><h3 class="appTag">In&#8209;App&nbsp;Purchase</h3><h3 class="appTag">Social&nbsp;Sharing</h3>
+            </div>
+            <p class="appDescription">Mapgrounds is an app to make beautiful wallpapers for your phone using maps of the places mean the most.</p>
          </div>
          </a>
       </div>
