Further tweaks to Apps page and CSS

--- a/apps.html
+++ b/apps.html
@@ -29,9 +29,9 @@
          </div>
          </a>
       </div>
-      <div class="app">
+      <div class="app progress1000">
          <div class"appContent">
-         <a href="https://itunes.apple.com/gb/app/progress-1000-by-london-evening/id931391607?mt=8" target="_blank"><div class="app progress1000">
+         <a href="https://itunes.apple.com/gb/app/progress-1000-by-london-evening/id931391607?mt=8" target="_blank">
             <h2 class="appName">THE PROGRESS 1000</h2>
             <div class="tags">
             <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">Universal&nbsp;App</h3><h3 class="appTag">JSON&nbsp;Database</h3></br><h3 class="appTag">Adobe&nbsp;Analytics</h3><h3 class="appTag">Offline&nbsp;caching</h3>
@@ -40,9 +40,9 @@
          </div>
          </a>
       </div>
-      <div class="last app">
+      <div class="app copywriter">
          <div class"appContent">
-         <a href="https://itunes.apple.com/gb/app/copywriter/id670760844?mt=8" target="_blank"><div class="app copywriter">
+         <a href="https://itunes.apple.com/gb/app/copywriter/id670760844?mt=8" target="_blank">
             <h2 class="appName">COPYWRITER</h2>
             <div class="tags">
             <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">Custom&nbsp;Animation</h3><h3 class="appTag">Custom&nbsp;Interface</h3>
@@ -51,9 +51,9 @@
          </div>
          </a>
       </div>
-      <div class="app">
+      <div class="app evenap">
          <div class"appContent">
-            <a href="https://itunes.apple.com/ca/app/eve-alarm-power-nap/id789920975?mt=8" target="_blank"><div class="app evenap">
+            <a href="https://itunes.apple.com/ca/app/eve-alarm-power-nap/id789920975?mt=8" target="_blank">
             <h2 class="appName">EVE NAP TIMER</h2>
             <div class="tags">
             <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">Custom&nbsp;Interface</h3><h3 class="appTag">Notifications</h3>
@@ -62,9 +62,9 @@
          </div>
          </a>
       </div>
-      <div class="app">
+      <div class="last app mapgrounds">
          <div class"appContent">
-         <a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8" target="_blank"><div class="last app mapgrounds">
+         <a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8" target="_blank">
             <h2 class="appName">MAPGROUNDS</h2>
             <div class="tags">
             <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">MapKit</h3><h3 class="appTag">In&#8209;App&nbsp;Purchase</h3><h3 class="appTag">Social&nbsp;Sharing</h3>
@@ -73,16 +73,5 @@
          </div>
          </a>
       </div>
-      <!-- <ul class="apps">
-         <li> <a href="https://itunes.apple.com/app/the-independent/id499587380?mt=8" target="_blank" rel="external nofollow" title="The Independent"> <img src="/img/ind175.png" alt="The Independent"> <span>The Independent</span> </a> </li>
-         <li> <a href="https://itunes.apple.com/app/i-newspaper-your-concise-daily/id973146023?mt=8" target="_blank" rel="external nofollow" title="i"> <img src="/img/i175.jpeg" alt="i"> <span>i</span> </a> </li>
-         <li> <a href="https://itunes.apple.com/gb/app/london-evening-standard-for/id950221270?mt=8" target="_blank" rel="external nofollow" title="London Evening Standard"> <img src="/img/es175.jpeg" alt="London Evening Standard"> <span> Evening Standard</span> </a> </li>
-         <li> <a href="https://itunes.apple.com/app/top-1000-by-evening-standard/id931391607?mt=8" target="_blank" rel="external nofollow" title="The Top 1000"> <img src="/img/top175.jpeg" alt="The Top 1000"> <span>The Top 1000</span> </a> </li>
-         <li> <a href="https://itunes.apple.com/app/eve-alarm-time-to-sleep/id633081958?mt=8" target="_blank" rel="external nofollow" title="Eve Alarm"> <img src="/img/eve175.jpeg" alt="Eve Alarm"> <span>Eve Alarm</span> </a> </li>
-         <li> <a href="https://itunes.apple.com/app/eve-alarm-power-nap/id789920975?mt=8" target="_blank" rel="external nofollow" title="Eve Alarm: Nap Timer"> <img src="/img/na175.jpeg" alt="Eve Alarm: Nap Timer"> <span>Power Nap</span> </a> </li>
-         <li> <a href="https://itunes.apple.com/app/mapgrounds/id792151906?mt=8" target="_blank" rel="external nofollow" title="Mapgrounds"> <img src="/img/map175.jpeg" alt="Mapgrounds"> <span>Mapgrounds</span> </a> </li>
-         <li> <a href="https://itunes.apple.com/app/copywriter/id670760844?mt=8" target="_blank" rel="external nofollow" title="CopyWriter"> <img src="/img/cop175.png" alt="CopyWriter"> <span>CopyWriter</span> </a> </li>
-      </ul>
-      <p style="padding-bottom:80px;">I released my first app, <a href="http://www.appstore.com/danielpape/evealarmtimetosleep" target="_blank">Eve Alarm</a>, in April 2013. It was downloaded over 10,000 times in the first 6 weeks and was featured in the <i>Utilities</i> section of the UK &amp; US App Stores for over 6 months. I coded it mostly on the tube on the way to and from work. Every day tens of thousands of people use the apps I am responsible for across all major platforms.</p> -->
    </body>
 </html>
