Apps Page - full width images

--- a/apps.html
+++ b/apps.html
@@ -67,7 +67,7 @@
          <a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8" target="_blank">
             <h2 class="appName">MAPGROUNDS</h2>
             <div class="tags">
-            <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">MapKit</h3><h3 class="appTag">In&#8209;App&nbsp;Purchase</h3><h3 class="appTag">Social&nbsp;Sharing</h3>
+            <h3 class="appTag">Objective&#8209;C</h3><h3 class="appTag">MapKit</h3><h3 class="appTag">In&#8209;App&nbsp;Purchase</h3></br><h3 class="appTag">Social&nbsp;Sharing</h3>
             </div>
             <p class="appDescription">Mapgrounds is an app to make beautiful wallpapers for your phone using maps of the places mean the most.</p>
          </div>
